[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenuController.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_left = 0.45
anchor_top = 0.45
anchor_right = 0.45
anchor_bottom = 0.5
margin_right = -724.0
margin_bottom = -200.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Continue Button" type="Button" parent="VBoxContainer"]
margin_right = 134.0
margin_bottom = 20.0
text = "Continue"

[node name="Main Menu Button" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 134.0
margin_bottom = 44.0
text = "Back to Main Menu"

[node name="Quit Game Button" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 134.0
margin_bottom = 68.0
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Continue Button" to="." method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu Button" to="." method="_on_Main_Menu_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Game Button" to="." method="_on_Quit_Game_Button_pressed"]
